# SuperImage

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/src/core/: image_processor.py
app/src/ui/: main_window.py
app/src/ui/dialogs/: settings_dialog.py
app/src/ui/styles/: liquid_glass.qss
app/src/ui/widgets/: drop_area.py  image_list_widget.py  image_viewer.py  progress_widget.py
scripts/: main.py
scripts/src/: cli.py
scripts/src/models/: real_esrgan.py
