[project]
name = "superimage"
version = "0.1.0"
description = "An Image Super resolution app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pytest>=8.0.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "basicsr>=1.4.2",
    "facexlib>=0.2.5",
    "gfpgan>=1.3.5",
    "opencv-python>=4.0.0",
    "realesrgan>=0.3.0",
    "pyside6>=6.9.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
